Update Tarea integradora - parte 2 Finished revisions.ipynb

--- a/Tarea integradora - parte 2 Finished revisions.ipynb
+++ b/Tarea integradora - parte 2 Finished revisions.ipynb
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probabilidad de que la computadora antes de las 100 hs de uso\n"
+      "Probabilidad de que la computadora se rompa antes de las 100 hs de uso\n"
      ]
     },
     {
