--- a/Laboratorios/Laboratorio4.Rmd
+++ b/Laboratorios/Laboratorio4.Rmd
@@ -16,9 +16,9 @@ rasterImage(jj,0,0,1,1)
 ```
 
 ```{r}
-library(imager)
-im<-load.image("car_body.jpg")
-plot(im, ann=FALSE,axes=FALSE)
+#library(imager)
+#im<-load.image("car_body.jpg")
+#plot(im, ann=FALSE,axes=FALSE)
 ```
 
 ```{r}
@@ -75,9 +75,6 @@ print ("Con K = 10 el porcentaje de clasificacion correcta es: ")
 
 ```
 
-```{r}
-
-```
 
 ```{r}
 table(knn.a ,test.body)
@@ -206,9 +203,3 @@ table(knn.an2 ,test.bodyn2)
 table(knn.bn2 ,test.bodyn2)
 table(knn.cn2 ,test.bodyn2)
 ```
-
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
-
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
